<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Razeware LLC
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~ distribute, sublicense, create a derivative work, and/or sell copies of the
  ~ Software in any work that is designed, intended, or marketed for pedagogical or
  ~ instructional purposes related to programming, coding, application development,
  ~ or information technology.  Permission for such use, copying, modification,
  ~ merger, publication, distribution, sublicensing, creation of derivative works,
  ~ or sale is expressly withheld.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation">

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/bannerImgView"
          android:layout_width="match_parent"
          android:layout_height="@dimen/character_details_image_size"
          android:scaleType="centerCrop"
          tools:srcCompat="@tools:sample/avatars" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/character_details_label"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_extra_small" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:background="@color/colorWhite"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/normal_margin"
          android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_name_label"
            android:textSize="@dimen/text_size_extra_small" />

        <TextView
            android:id="@+id/nameTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_small"
            tools:text="Toxic Rick" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/character_details_separator_height"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@color/colorLightGrey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/character_gender_label"
            android:textSize="@dimen/text_size_extra_small" />

        <TextView
            android:id="@+id/genderTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_extra_small"
            tools:text="Male" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/character_details_separator_height"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@color/colorLightGrey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/character_origin_label"
            android:textSize="@dimen/text_size_extra_small" />


        <TextView
            android:id="@+id/typeTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_small"
            tools:text="Rick's Toxic Side" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/character_details_separator_height"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@color/colorLightGrey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/character_status_label"
            android:textSize="@dimen/text_size_extra_small" />

        <TextView
            android:id="@+id/statusTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_small"
            tools:text="Dead" />

      </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

  </LinearLayout>
</ScrollView>